--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
     "google-map-react": "^2.1.10",
+    "jquery": "^3.6.0",
     "openapi-client-axios": "^4.3.3",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^17.0.2",
